# ucg

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  Doxyfile  Gemfile  Makefile.am  NEWS  NEWS.md  README.md  _config-old.yml  _config.yml  build_info.h  configure.ac  index.html  index.md  main.cpp  params.json  robots.txt  shippable.yml  sitemap.txt  ucg.1
.github/workflows/: github-actions-demo.yml  github-actions-ucg-ci-using-podman.yml  github-actions-ucg-ci.yml
_data/: categories.yml  navigation.yml  ui-text.yml
_docs/: 01-Installation.md
_includes/: archive-single.html
_pages/: README-olducg.md  about.md  category-portability-pointers.html  category-portability-pointers.md  home.md  portability-pointers-archive.html
_portability-pointers/: index.html
_portability_pointers/: index.html
_posts/: 2016-02-11-welcome-to-jekyll.markdown  2016-07-11-PortabilityPointers-POPCNT.md  2016-07-11-PortabilityPointers-sed.md
_posts/articles/: 2013-08-16-code-highlighting-post.md  2017-04-30-jekyll-website-launch.md  README-olducg.md  speed.md
_posts/blog/: 2016-02-11-welcome-to-jekyll.markdown  2016-07-11-PortabilityPointers-POPCNT.md  2016-07-11-PortabilityPointers-sed.md
_posts/news/: 2016-07-11-PortabilityPointers-POPCNT.md  2016-07-11-PortabilityPointers-sed.md
about/: index.md
doc/: Makefile.am  ucg.1
images/: LogoSrc.odg  site-logo-ucg.xcf
m4/: ax_count_cpus.m4  ax_cxx_compile_stdcxx_14.m4  ax_cxx_var_prettyfunc.m4  ax_gcc_builtin.m4  ax_gcc_func_attribute.m4  ax_path_lib_pcre.m4  ax_prog_doxygen.m4  axucg_check_func.m4  gnulib-cache.m4  grvs_arg_with_dir.m4  grvs_multiversioning.m4  libtool.m4
news/: index.md
portability-pointers/: index.html
readme/: README.md  index.md
src/: ArgParse.cpp  ArgParse.h  DirInclusionManager.cpp  DirInclusionManager.h  File.cpp  File.h  FileID.cpp  FileID.h  FileScanner.cpp  FileScanner.h  FileScannerCpp11.cpp  FileScannerCpp11.h  FileScannerPCRE.cpp  FileScannerPCRE.h  FileScannerPCRE2.cpp  FileScannerPCRE2.h  FileScanner_sse4_2.cpp  Globber.cpp  Globber.h  Logger.cpp  Logger.h  Makefile.am  Match.cpp  Match.h  MatchList.cpp  MatchList.h  MemDiags.cpp  MemDiags.h  OutputContext.cpp  OutputContext.h  OutputTask.cpp  OutputTask.h  ResizableArray.cpp  ResizableArray.h  TypeManager.cpp  TypeManager.h  sync_queue.h  sync_queue_impl_selector.h
src/future/: CompileTimeInfo.cpp  Makefile.am  dummy.cpp  memory.hpp  shared_mutex.hpp  string.hpp  string_view.hpp  type_traits.hpp
src/libext/: DirTree.cpp  DirTree.h  DoubleCheckedLock.hpp  FileDescriptor.hpp  FileDescriptorCache.cpp  FileDescriptorCache.h  FileID.cpp  FileID.h  Logger.cpp  Logger.h  Makefile.am  Terminal.cpp  Terminal.h  cpuidex.cpp  cpuidex.hpp  double_checked_lock.hpp  dummy.cpp  exception.hpp  filesystem.hpp  hints.hpp  integer.hpp  memory.hpp  microstring.hpp  multiversioning.cpp  multiversioning.hpp  static_diagnostics.hpp  string.hpp
tests/: .gitignore  Makefile.am  arg_and_rc_handling.at  atlocal.in  benchmark_progs.csv  dir_tree_traversal.at  dummy-file-gen.cpp  file_presentation.at  gen_test_script.py  lorem_ipsum.hpp  match_correctness.at  opt_only_cpp.csv  opts_defs.csv  performance_test_gen.awk  performance_test_runner.awk  performance_test_summarizer.awk  performance_tests.at  portable_time.cpp  sanity.at  search_modifiers.at  stats.awk  test_cases.csv  testsuite.at  type_inclusion.at  unittests.at  unittests.cpp  version.at
theme-setup/: index.md
