# Top-level Makefile.am for UniversalCodeGrep
#
# Copyright 2015-2016 Gary R. Van Sickle (grvs@users.sourceforge.net).
#
# This file is part of UniversalCodeGrep.
#
# UniversalCodeGrep is free software: you can redistribute it and/or modify it under the
# terms of version 3 of the GNU General Public License as published by the Free
# Software Foundation.
#
# UniversalCodeGrep is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along with
# UniversalCodeGrep.  If not, see <http://www.gnu.org/licenses/>.

# Make sure autotools pick up the M4 macros in the ./m4 directory, and also copy
# any third-party macros (e.g. the system-wide ax_* Autoconf Macro Archive ones
# in /usr/share/aclocal) to ./m4 so they get distributed and automatically updated.
# Only useful in the top-level Makefile.am (see http://sources.redhat.com/automake/automake.html#Rebuilding).
ACLOCAL_AMFLAGS = -I m4 --install

# The subdirectories containing the source code, docs, and tests.
# Note: The code in src depends on the libraries in third_party and/or lib, so make sure the latter are always listed before the former.
# Note that we can't list these other libraries in e.g. *_DEPENDENCIES because that replaces all Automake-generated dependencies.
SUBDIRS = lib third_party src . tests

# Per gnulib-tool instructions.
EXTRA_DIST = m4/gnulib-cache.m4

# Make sure README.rd and other docs get distributed and installed correctly.
dist_doc_DATA = README.md NEWS.md COPYING AUTHORS

# The Automake rules for the ucg executable.
bin_PROGRAMS=ucg
ucg_SOURCES=main.cpp build_info.h
nodist_ucg_SOURCES=build_info.cpp
CLEANFILES=build_info.cpp


# Collect some make-time info. 
FORCE:
build_info.cpp: FORCE verify-provenance
	-rm "$@"
	echo "// Build information file." > "$@"
	echo "// THIS FILE IS AUTOMATICALLY GENERATED BY THE TOP-LEVEL MAKEFILE, DO NOT EDIT" >> "$@"
	echo "// VCS repo info (git describe / tarball)" >> "$@"
	if [ -f $(top_srcdir)/.tarball-version ]; then \
		: We are building from a tarball. ; \
		GIT_DESCRIBE=$$(cat $(top_srcdir)/.tarball-version); \
	elif (which git && cd $(top_srcdir) && git describe > /dev/null); then \
		: We are building from a git repo. ; \
		GIT_DESCRIBE="$$(cd $(top_srcdir) && git describe --long --dirty)"; \
	else GIT_DESCRIBE="unknown"; \
	fi; \
	echo "const char *g_git_describe = \"$${GIT_DESCRIBE}\";" >> "$@"
	echo "// CXX" >> "$@"
	echo "const char *g_cxx = \"$(CXX)\";" >> "$@"
# This is known to work for g++ and clang++.
	CXX_VERSION_STR=$$(if $$($(CXX) --version > /dev/null); then echo "$$($(CXX) --version | sed -r -n 's/^(.*[0-9]+\.[0-9]+\.[0-9]+.*)$$/\1/p')"; else echo "unknown"; fi;); \
	echo "const char *g_cxx_version_str = \"$${CXX_VERSION_STR}\";" >> "$@";

# Make sure we're either trying to build from a git repo or a tarball, and not in some weird state.
verify-provenance:
	if [ -d "$(top_srcdir)/.git" -a -f "$(top_srcdir)/.tarball-version" ]; \
	then \
		echo "ERROR: The top-level source directory, \"$(top_srcdir)\", appears to be in an"; \
		echo "inconsistent state: it looks like both an extracted tarball and a .git repo."; \
		echo "Removing the file \"$(top_srcdir)/.tarball-version\" will allow it to build."; \
		exit 1; \
	fi;
	
dist-hook:
	echo -n "$$(cd $(top_srcdir) && git describe --long --dirty | tr -d '\r\n')-tarball"  > "$(distdir)/.tarball-version"

ucg_CPPFLAGS = -I $(top_srcdir)/src \
	-I $(top_srcdir)/lib \
	$(AM_CPPFLAGS) 
ucg_CFLAGS = $(AM_CFLAGS)
ucg_CXXFLAGS = $(AM_CXXFLAGS)
ucg_LDFLAGS = $(AM_LDFLAGS)
ucg_LDADD = ./src/libsrc.a ./lib/libgnu.a

